0.5.1	UNRELEASED

 BUG FIXES
 
  * Fix ReceivePackHandler to disallow removing refs without delete-refs.
    (Dave Borowitz)

  * Deal with capabilities required by the client, even if they 
    can not be disabled in the server. (Dave Borowitz)

  * Fix trailing newlines in generated patch files.
    (Jelmer Vernooij)

 FEATURES

  * Add include-tag capability to server. (Dave Borowitz)

 TESTS

  * Add framework for testing compatibility with C Git. (Dave Borowitz)

 API BREAKAGES

  * The 'committer' and 'message' arguments to Repo.do_commit() have 
    been swapped. 'committer' is now optional. (Jelmer Vernooij)

0.5.0	2010-03-03

 BUG FIXES

  * Support custom fields in commits (readonly). (Jelmer Vernooij)

  * Improved ref handling. (Dave Borowitz)

  * Rework server protocol to be smarter and interoperate with cgit client.
    (Dave Borowitz)

  * Add a GitFile class that uses the same locking protocol for writes as 
    cgit. (Dave Borowitz)

  * Cope with forward slashes correctly in the index on Windows.
    (Jelmer Vernooij, #526793)

 FEATURES

  * --pure option to setup.py to allow building/installing without the C 
    extensions. (Hal Wine, Anatoly Techtonik, Jelmer Vernooij, #434326)

  * Implement Repo.get_config(). (Jelmer Vernooij, Augie Fackler)

  * HTTP dumb and smart server. (Dave Borowitz)

  * Add abstract baseclass for Repo that does not require file system 
    operations. (Dave Borowitz)

0.4.1	2010-01-03

 FEATURES

  * Add ObjectStore.iter_tree_contents(). (Jelmer Vernooij)

  * Add Index.changes_from_tree(). (Jelmer Vernooij)

  * Add ObjectStore.tree_changes(). (Jelmer Vernooij)

  * Add functionality for writing patches in dulwich.patch.
    (Jelmer Vernooij)

0.4.0	2009-10-07

 DOCUMENTATION

  * Added tutorial.

 API CHANGES

  * dulwich.object_store.tree_lookup_path will now return the mode and 
    sha of the object found rather than the object itself.

 BUG FIXES
